--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,10 @@ APP_URL=http://localhost:3001 #frontend
 BACKEND_URL='http://localhost:3000' #backend
 #strategy
 JWT_SECRET=secret
-MONGO_URI=mongodb+srv://user:password@database.5iypfed.mongodb.net
+
 #DB
+MONGO_URI=mongodb+srv://user:password@database.5iypfed.mongodb.net
 
 #email cred
-EMAIL_USER="email" // if not need it remove it because it will make delay
-EMAIL_PASS="password" // if not need it remove it because it will make delay
+#EMAIL_USER="email" // if not need it remove it because it will make delay
+#EMAIL_PASS="password" // if not need it remove it because it will make delay
